# opengl-hotreloading-boilerplate

./: .gitignore  CMakeLists.txt  CMakeLocal.cmake  refresh-project.bat
game/exe/: CMakeLists.txt
game/exe/src/: main.c  reloading.c  reloading.h
game/exe/src/window/: input.c  input.h  window.c  window.h
game/hot/: CMakeLists.txt
game/hot/src/: game.c  game.h
game/shared/: input_def.h  interface.h
